--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 layout: sidebar
-style: light
+style: dark
 
 plugins:
   - jekyll-octicons
@@ -40,7 +40,7 @@ projects:
   # medium: your_username
   # stackoverflow: your_user_id
   # telegram: your_username
-  # twitter: your_username
+  twitter: MarinaProlygina
   # unsplash: your_username
   # vk: your_username
   # website: http://your_website_url
